--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>风也小窝 | 保持初心，向往未来！</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaygb/www.kaygb.com/assets/css/main.css" />
     <link rel="shortcut icon" href="https://file.170601.xyz/upload/2020/0517/ad5c9cfb47063.png" type="image/x-icon">
     <meta name="keywords" content="风也的小站,风也小站,风也,风也温柔,风也的博客,个人博客">
     <meta name="description" content="保持初心，向往未来！">
@@ -36,7 +36,7 @@
         </ul>
         <ul class="copyright">
             <li>&copy; 风也小窝</li>
-            <li><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6/a></li>
+            <li><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6</a></li>
             <li>Design : <a href="http://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 
         </ul>
@@ -44,7 +44,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/kaygb/www.kaygb.com/assets/js/main.js"></script>
 
 </body>
 
