--- a/index.html
+++ b/index.html
@@ -3,24 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>风也小窝</title>
+    <title>风也小窝 | 编程与学习 | 自律与生活</title>
+    <meta name="keywords" content="风也小窝,风也的个人主页,编程与学习,自律与生活">
+    <meta name="theme-color" content="#000">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/kaygb/blog-images/static_image/kaygb-logo/tx_compressed.jpg" type="image/x-icon">
     <style>
         body{
-            /* background-image: url(https://cdn.jsdelivr.net/gh/kaygb/picplus-images/20200620200704235925.jpg); */
             background-attachment: fixed;
             background-repeat: no-repeat;
-            /* backdrop-filter: blur(10px); */
             position: relative;
             background-color: black;
         }
-        /* .image img{
-            width: 100%;
-            position: fixed;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            margin: 0;
-            padding: 0;
-        } */
         .main{
             max-width: 600px;
             min-height: 500px;
@@ -69,7 +62,7 @@
             bottom: 0;
         }
         .footer{
-            position: absolute;
+            /* position: absolute; */
             bottom: 0;
             line-height: 50px;
             height: 50px;
