--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         }
         h1::before{
-            content: 'LIFE IS A STORY';
+            content: 'LIFE IS A STORY ！';
             position: absolute;
             color: #b2bec348;
             z-index: -1;
