--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             right: 0;
             bottom: 0;
         }
+        .zz img{
+            backdrop-filter: blur(10px);
+        }
         .footer{
             /* position: absolute; */
             bottom: 0;
@@ -92,7 +95,10 @@
     </style>
 </head>
 <body>
-    <div class="zz"></div>
+    <div class="zz">
+        <!-- <img src="https://cdn.jsdelivr.net/gh/kaygb/picplus-images/20200620200704235925.jpg" alt="" srcset=""> -->
+    </div>
+
     <div class="main">
         
         <div class="title">
