--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         }
         h1::before{
-            content: 'LIFE IS A STORY ！';
+            content: 'LIFE IS A STORY！';
             position: absolute;
             color: #b2bec348;
             z-index: -1;
@@ -115,8 +115,9 @@
             <p>You can catch me on my <a href="https://blog.kaygb.com/" target="_blank">blog</a> or read my <a href="https://wiki.eas1.cn/" target="_blank">wiki</a>.</p>
         </div>
         <div class="footer">
-            <span>&copy; 风也小窝</span>
-            <span><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6</a></span>
+            <span>&copy; 风也小窝</span>&nbsp;
+            <span><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6</a></span>&nbsp;
+            <span>Design by : <a href="https://blog.kaygb.com/" target="_blank">kaygb</a></span>
             <br>
             <span><a class="upyun" href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank" rel="nofollow"><img src="https://cdn.jsdelivr.net/gh/kaygb/blog-images/img/20200320214011.png" style="width:50px;"></a></span>
             
