--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!-- 
+Name：bppws
+Author：kaygb
+Version：20200708
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,95 +13,14 @@
     <meta name="theme-color" content="#000">
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/kaygb/blog-images/static_image/kaygb-logo/tx_compressed.jpg" type="image/x-icon">
     <style>
-        body{
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            position: relative;
-            background-color: black;
-        }
-        .main{
-            max-width: 600px;
-            min-height: 500px;
-            margin: 200px auto;
-            display: block;
-            position: relative;
-
-
-        }
-        div{
-            display: block;
-        }
-        h1{
-            color: #e84393;
-            font-size: 4rem;
-            position: relative;
-
-        }
-        h1::before{
-            content: 'LIFE IS A STORY！';
-            position: absolute;
-            color: #b2bec348;
-            z-index: -1;
-            left: 5px;
-            top: 10px;
-        }
-        p{
-            color: #b2bec3;
-            font-size: 1.5rem;
-        }
-        p a{
-            color: #e84393;
-        }
-        p a:hover,p a:visited,p a:focus{
-            color: #e84393;
-        }
-        .zz{
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.486);
-            z-index: -1;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
-        .zz img{
-            /* backdrop-filter: blur(10px); */
-            filter: blur(20px);
-            min-width: 100%;
-            min-height: 100%;
-            max-width: 200%;
-            max-height: 200%;
-        }
-        .footer{
-            /* position: absolute; */
-            bottom: 0;
-            line-height: 50px;
-            height: 50px;
-            color: #999;
-            font-size: .9rem;
-        }
-        .footer a{
-            color: #999;
-
-        }
-        .footer img{
-            /* position: absolute; */
-            margin: 0;
-            padding: 0;
-            /* bottom: -20; */
-        }
-        a.upyun{
-            /* margin: 0; */
-            height: 50px;
-            
-        }
-        @media screen and (max-width: 600px) {
-            .main{
-            margin: 100px auto;
-        }
-}
+            h1::before{
+                content: 'LIFE IS A STORY！';
+                position: absolute;
+                color: #b2bec348;
+                z-index: -1;
+                left: 5px;
+                top: 10px;
+            }
     </style>
 </head>
 <body>
