--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Version：20200708
     <meta name="keywords" content="风也小窝,风也的个人主页,编程与学习,自律与生活">
     <meta name="theme-color" content="#000">
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/kaygb/blog-images/static_image/kaygb-logo/tx_compressed.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaygb/www.kaygb.com@master/pws20200708/style.css">
     <style>
             h1::before{
                 content: 'LIFE IS A STORY！';
@@ -69,6 +70,8 @@ Version：20200708
             effectspeed: 1000 
         });
     }
+    console.log(" %c bppws %c https://github.com/kaygb/www.kaygb.com/ ", "color: #000; background: pink; padding:5px;", "background: #fff; padding:5px;");
+//初始化
     </script>
 </body>
 </html>
