--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ Version：20200708
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaygb/www.kaygb.com@master/pws20200708/style.css">
     <style>
             h1::before{
-                content: 'LIFE IS A STORY！';
+                content: 'KAYGB\'S HOME';
                 position: absolute;
                 color: #b2bec348;
                 z-index: -1;
-                left: 5px;
+                left: 10px;
                 top: 10px;
             }
     </style>
@@ -32,9 +32,10 @@ Version：20200708
     <div class="main">
         
         <div class="title">
-            <h1>LIFE IS A STORY !</h1>
+            <h1>KAYGB'S HOME</h1>
         </div>
         <div class="content">
+            <p>LIFE IS A STORY.</p>
             <p>So, enjoy life!</p>
             <p>Whatever you do, you hold on to that foolishly hopeful smile.</p>
             <p>You can catch me on my <a href="https://blog.kaygb.com/" target="_blank">blog</a> or read my <a href="https://wiki.eas1.cn/" target="_blank">wiki</a>.</p>
