--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Version：20200708
     <title>风也小窝 | 编程与学习 | 自律与生活</title>
     <meta name="keywords" content="风也小窝,风也的个人主页,编程与学习,自律与生活">
     <meta name="theme-color" content="#000">
-    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/kaygb/blog-images/static_image/kaygb-logo/tx_compressed.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaygb/Apage@master/pws20200708/style.css">
     <style>
             h1::before{
@@ -26,7 +26,7 @@ Version：20200708
 </head>
 <body>
     <div class="zz">
-        <img class="lazy-img" data-original="https://cdn.jsdelivr.net/gh/kaygb/picplus-images/bgimg/winterp.jpg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAICRAEAOw==" alt="" srcset="">
+        <img class="lazy-img" data-original="https://i.loli.net/2020/09/14/v4Si8BIupOVcwm6.jpg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAICRAEAOw==" alt="" srcset="">
     </div>
 
     <div class="main">
@@ -45,7 +45,7 @@ Version：20200708
             <span><a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow">豫ICP备19002054号-6</a></span>&nbsp;
             <span>Design by : <a href="https://blog.kaygb.com/" target="_blank">kaygb</a></span>
             <br>
-            <span><a class="upyun" href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank" rel="nofollow"><img src="https://cdn.jsdelivr.net/gh/kaygb/blog-images/img/20200320214011.png" style="width:50px;"></a></span>
+            <span><a class="upyun" href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank" rel="nofollow"><img src="https://i.loli.net/2020/09/14/YbXKvLAJhlWN1Ox.png" style="width:50px;"></a></span>
             
         </div>
 
